# rstcmalloc

./: Cargo.toml  README.md  build.rs
.claude/: settings.local.json
.github/scripts/: extract-criterion.py
.github/workflows/: bench-pr.yml  bench-track.yml  ci.yml
bench/: Cargo.toml  build.rs
bench/benches/: alloc_bench.rs
dev/bench/: data.js
dev/charts/: index.html
examples/: demo.rs
rseq/examples/: cpu_id.rs  percpu_cache.rs
rseq/src/: abi.rs  ops.rs  percpu.rs  syscall.rs  thread.rs
scripts/: build_tcmalloc.rs
src/: allocator.rs  central_free_list.rs  cpu_cache.rs  ffi.rs  histogram.rs  lib.rs  page_heap.rs  pagemap.rs  platform.rs  size_class.rs  span.rs  sync.rs  thread_cache.rs  transfer_cache.rs
src/platform/: unix.rs  windows.rs
tests/: alignment.rs  basic.rs  debug_addr.rs  debug_isolate.rs  debug_minimal.rs  debug_sizes.rs  debug_vec.rs  histogram.rs  multithreaded.rs  stress.rs
