[package]
name = "rstcmalloc-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
mimalloc = "0.1"
snmalloc-rs = "0.3"
rpmalloc = "0.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[[bench]]
name = "alloc_bench"
harness = false
